# Lilium-Semiold

./: .gitignore  Cargo.toml  LICENSE  Makefile.def  Makefile.in  Makefile.tpl  aclocal.m4  bochsrc.txt  build-iso.sh  config.sub  configure  configure.ac  gen-bochs-symbols.sh  limine-iso.cfg  linker-old.ld  linker.ld  serial.txt  spawn-qemu-and-gdb.sh  x86_64.json
.cargo/: config  config.toml
include/: memcpy.h
m4/: lcrust_prog_rustc.m4
phantom-dev/: Cargo.toml
phantom-dev/src/: lib.rs
phantom-filesystem-drivers/: Cargo.toml
phantom-filesystem-drivers/src/: lib.rs  phantomfs.rs  traits.rs
phantom-fs-drivers/: Cargo.toml  Makefile.def  Makefile.in  configure.ac
phantom-fs-drivers/src/: lib.rs
phantom-fs-drivers/src/phantomfs/: stream.rs
phantom-kernel/: Cargo.toml  Makefile.def  Makefile.in  Makefile.tpl  aclocal.m4  build.rs
phantom-kernel/src/: lib.rs  x86_64.rs
phantom-loader/: Cargo.toml  Makefile.def  Makefile.in  Makefile.tpl  asm.mk.in  configure  configure.ac
phantom-loader/asm/x86_64/: Makefile.in  loader.S  memcpy.c
phantom-loader/src/: lib.rs  search.rs  x86_64.rs
phantom-panic-halt/: Cargo.toml  Makefile.def  Makefile.in  configure
phantom-panic-halt/src/: lib.rs
phantom-print-vram/: Cargo.toml
phantom-print-vram/src/: lib.rs  x86_64.rs
phantomos-init/: Cargo.toml  build.rs
phantomos-init/.cargo/: config
phantomos-init/src/: acpi.rs  allocator.rs  devicetree.rs  dynloader.rs  elf.rs  lib.rs  main.rs  pci.rs  rawmem.rs  util.rs  writer.rs  x86_64.rs
phantomos-kernel/: Cargo.toml
phantomos-kernel-std/: Cargo.toml
phantomos-kernel-std/src/: cell.rs  collection.rs  hash.rs  io.rs  lib.rs  str.rs  sync.rs
phantomos-kernel/src/: addr_space.rs  allocator.rs  handle.rs  lib.rs  security.rs  state.rs  thread.rs
targets/: x86_64-pc-phantom-kernel.json
