[package]
name = "phantom-filesystem-drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
std = { path = "../phantomos-kernel-std" }
bytemuck = {version = "1.7",features=["derive","min_const_generics"]}
bitflags = "1.3"
fake-enum = "0.1.4"
crc-any = "2.4.2"

[lib]
crate-type = ["rlib"]