[package]
name = "phantom-fs-drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phantom-panic-halt = {path="../phantom-panic-halt"}
phantom-dev = {path="../phantom-dev"}
bytemuck = {version="1.7.3", features=["derive","min_const_generics"]}
bitflags = {version="1.3.2"}
fake-enum = {version="0.1"}


[lib]
crate-type = ["cdylib","rlib"]