[package]
name = "phantomos-init"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
paste = "1.0.6"
stivale-boot = { git = "https://github.com/Andy-Python-Programmer/stivale", features = ["uuid"] }
std = { path = "../phantomos-kernel-std" }
uuid = { version = "0.8.2", default-features = false }

[lib]
crate-type = ["cdylib"]
