[package]
name = "phantomos-init"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
paste = "1.0.6"
stivale-boot = { git = "https://github.com/Andy-Python-Programmer/stivale", features = ["uuid"] }
std = { path = "../phantomos-kernel-std" }
uuid = { version = "0.8.2", default-features = false }
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
bitflags = "1.3.2"

[lib]
crate-type = ["cdylib"]
